# RSE

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: node.js.yml  rust.yml
crawler/: .gitignore  Cargo.toml  Dockerfile  README.md  api-deployment.yaml  compose.yaml  crawler-deployment.yaml  go.mod  postgres-deployment.yaml  redis-deployment.yaml  shell.nix
crawler/helm/gse/: Chart.yaml  values.yaml
crawler/helm/gse/templates/: configmap.yaml  deployment.yaml  secrets.yaml  service.yaml
crawler/migrations/2024-07-05-072532_create_websites/: up.sql
crawler/src/: crawler.rs  main.rs
crawler/src/api/: Dockerfile  go.mod  go.sum  main.go
crawler/src/cache/: mod.rs
crawler/src/crawler/: Dockerfile  crawler.go  go.mod  go.sum  main.go
crawler/src/crawler/crawler/: crawler.go
crawler/src/db/: mod.rs  schema.rs
crawler/src/postgres/: Dockerfile  init_db.sql
crawler/src/redis/: Dockerfile
crawler/src/redis/scripts/: seed_urls.sh
server/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  rse_base.Dockerfile  rse_crawler.Dockerfile  rse_server.Dockerfile  setup.sh
server/common/: Cargo.toml
server/common/database/: Cargo.toml
server/common/database/migrations/2023-10-20-134231_create_pages/: up.sql
server/common/database/src/: lib.rs  model.rs  schema.rs
server/common/errors/: Cargo.toml
server/common/errors/src/: lib.rs
server/common/migrations/2023-10-20-134231_create_pages/: up.sql
server/common/migrations/2023-10-20-134444_create_forward_links/: up.sql
server/common/src/: lib.rs
server/common/src/database/: mod.rs  model.rs
server/common/src/errors/: mod.rs
server/common/src/utils/: mod.rs  timer.rs  words.rs
server/common/src/utils/env/: crawler.rs  data.rs  mod.rs  scraper.rs  web.rs
server/common/utils/: Cargo.toml
server/common/utils/src/: timer.rs  words.rs
server/common/utils/src/env/: data.rs  mod.rs  ranker.rs  spider.rs  workers.rs
server/database/lib/: Cargo.toml
server/database/lib/migrations/2023-10-20-134231_create_pages/: up.sql
server/database/lib/migrations/2023-10-20-134444_create_forward_links/: down.sql  up.sql
server/database/lib/migrations/2023-10-25-112530_create_metadata/: up.sql
server/database/lib/migrations/2023-10-27-065745_create_keywords/: down.sql  up.sql
server/database/lib/src/: lib.rs  model.rs  schema.rs
server/database/sql/: create.sql  data.sql  sites.sql  visits.sql
server/error/lib/: Cargo.toml
server/error/lib/src/: lib.rs
server/img/: erd.uml
server/rse_crawler/: Cargo.toml  Dockerfile  Specifications.md  seed_urls.json
server/rse_crawler/db/migrations/2023-10-20-134231_create_pages/: up.sql
server/rse_crawler/db/migrations/2023-10-20-134444_create_forward_links/: up.sql
server/rse_crawler/db/migrations/2023-10-20-134651_create_keywords/: down.sql
server/rse_crawler/db/src/: lib.rs
server/rse_crawler/lib/: Cargo.toml
server/rse_crawler/lib/migrations/2023-10-20-134651_create_keywords/: up.sql
server/rse_crawler/lib/src/: schema.rs
server/rse_crawler/src/: TODO.md  crawler.rs  data.rs  error.rs  indexer.rs  main.rs  robots.rs  spider.rs
server/rse_crawler/src/crawler/: frontier.rs  mod.rs
server/rse_crawler/src/crawler/frontier/: backend.rs  frontend.rs
server/rse_crawler/src/scrapers/: mod.rs  web.rs
server/rse_crawler/src/spiders/: html.rs  mod.rs  web.rs
server/rse_crawler/src/util/: mod.rs  robots.rs  timer.rs
server/rse_crawler/src/util/env/: crawler.rs  data.rs  mod.rs  seed_url.rs  spider.rs  workers.rs
server/rse_crawler/src/utils/: db_manager.rs  html.rs  mod.rs  seed_urls.rs  time.rs
server/rse_crawler/src/utils/db/: model.rs  schema.rs
server/rse_crawler/src/utils/db/migrations/2023-10-19-060107_create_pages/: up.sql
server/rse_crawler/src/utils/db/migrations/2023-10-19-060452_create_keywords/: down.sql  up.sql
server/rse_crawler/src/utils/db/migrations/2023-10-19-060644_create_forward_links/: down.sql  up.sql
server/rse_crawler/src/utils/env/: crawler.rs  database.rs  mod.rs  seed_url.rs  threading.rs  workers.rs
server/rse_server/: Cargo.toml  Dockerfile
server/rse_server/lib/: Cargo.toml
server/rse_server/lib/src/: lib.rs  model.rs
server/rse_server/src/: info.rs  main.rs  query.rs  search.rs
server/rse_server/src/utils/: db_manager.rs
server/src/: main.rs
website/: package-lock.json  package.json  postcss.config.js  shell.nix  tailwind.config.js
website/src/routes/: +page.svelte
