[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4.20"
env_logger = "0.10.0"

# Error Handling
thiserror = "1.0.50"

# HTTP
reqwest = "0.11.22"
url = "2.4.1"

# Database
diesel = "2.1.3"
diesel-async = { version = "0.4.1", features = ["postgres"] }

# Scraper
scraper = "0.18.1"
const_format = "0.2.32"

# Seed URLs
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0.108"

## Words
regex = "1.10.1"
rust-stemmers = "1.2.0"
