[package]
name = "rse_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4.20"
env_logger = "0.10.0"

# Async Runtime
tokio = { version = "1.33.0", features = ["full"] }

# Seed URLs
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"

# Database
db = { path = "../database/lib" }
diesel = "2.1.0"
diesel-async = { version = "0.4.1", features = ["postgres"] }

# Error Handling
error = { path = "../error/lib" }

# Crawler
reqwest = "0.11.22"
tokio-stream = "0.1.14"
url = { version = "2.4.1", features = ["serde"] }

# Spider
async-trait = "0.1.74"
futures = "0.3.28"
regex = "1.10.1"
scraper = "0.18.0"
html5ever = "0.26.0"
rust-stemmers = "1.2.0"

# Utility
const_format = "0.2.32"
