[package]
name = "rse_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4.20"
env_logger = "0.10.0"

# Error Handling
error = { path = "../common/errors" }

# Database
database = { path = "../common/database" }
diesel = "2.1.0"

# Utilities
utils = { path = "../common/utils" }

# Async Runtime
tokio = { version = "1.33.0", features = ["full"] }

# Crawler
futures = "0.3.28"
tokio-stream = "0.1.14"
url = { version = "2.4.1", features = ["serde"] }

# Spider
async-trait = "0.1.74"
serde = "1.0.190"
reqwest = "0.11.22"
regex = "1.10.1"
scraper = "0.18.0"
html5ever = "0.26.0"
rust-stemmers = "1.2.0"
