[package]
name = "rse_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4.20"
env_logger = "0.10.0"

# Utilities
common = { path = "../common" }

# Database
diesel = "2.1.0"

# Async Runtime
tokio = { version = "1.33.0", features = ["full"] }

# Crawler
futures = "0.3.28"
tokio-stream = "0.1.14"

# Scraper
scraper = "0.18.1"
async-trait = "0.1.74"
reqwest = "0.11.22"
url = "2.4.1"
