[package]
name = "rse_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4.20"
env_logger = "0.10.0"

# Utilities
common = { path = "../common" }
rust-stemmers = "1.2.0"

# Database
diesel = "2.1.0"

# Web Server
actix-web = "4.4.0"
serde = { version = "1.0.189", features = ["derive"] }

