[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4.20"
env_logger = "0.10.0"

# Error Handling
error = { path = "../errors" }

# Spider
const_format = "0.2.32"
reqwest = "0.11.22"

# Seed URLs
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0.108"

# Words
regex = "1.10.1"
rust-stemmers = "1.2.0"
