[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = { version = "0.4.20", features = [] }
env_logger = "0.10.0"

# Database
diesel = "2.1.3"
diesel-async = { version = "0.4.1", features = ["postgres"] }
url = { version = "2.4.1", features = [] }
serde = { version = "1.0.189", features = ["derive"] }
